<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CounterActivity">

    <Button
        android:id="@+id/but_dec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:text="@string/text_decrement"
        android:onClick="Decrement"
        app:layout_constraintEnd_toStartOf="@+id/but_res"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/but_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/text_reset"
        android:onClick="Reset"
        app:layout_constraintEnd_toStartOf="@+id/but_inc"
        app:layout_constraintStart_toEndOf="@+id/but_dec"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/but_inc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_increment"
        android:onClick="Increment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/but_res"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/counter_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value"
        app:layout_constraintBottom_toTopOf="@+id/but_res"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/but_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/text_next"
        android:onClick="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/input_value_couter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but_dec" />

    <Button
        android:id="@+id/but_set_new_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_set"
        android:onClick="SetValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_value_couter" />
</androidx.constraintlayout.widget.ConstraintLayout>